# secure-binder

./: Cargo.toml  Makefile.toml  README.md
data/: 1.json  2.json  3.json  mock1.json
src/: main.rs
src/core/: binder.rs  loader.rs  mod.rs
src/infrastructure/: data_loader.rs
