[package]
name = "secure-binder"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
blake3 = "1.5.4"
curve25519-dalek = "4.1.3"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[alias]
# Define a command for watching and running
watch-run = "watch -x run"
