[package]
name = "secure-binder"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ocelot = { git = "https://github.com/GaloisInc/swanky", package = "ocelot" }
fancy_garbling = { git = "https://github.com/GaloisInc/swanky", package = "fancy-garbling" }
scuttlebutt = { git = "https://github.com/GaloisInc/swanky", package = "scuttlebutt" }

[alias]
# Define a command for watching and running
watch-run = "watch -x run"
